<resources>
  <string name="app_name">Working with sqlite</string>
  <string name="guestCommandName">Guest command name</string>
  <string name="ownerCommandName">Owner command name</string>
  <string name="score">Score</string>
  <string name="buttonAddText">Add</string>
  <string name="buttonViewDBText">View DB</string>
  <string name="buttonClearText">Clear DB</string>
  <string name="emptyFieldError">The field must not be empty</string>
  <string name="emptyFieldErrorAsStar">*</string>
</resources>