<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

  <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          android:id="@+id/guestCommandNameLayout"
          app:layout_constraintBottom_toTopOf="@+id/ownerCommandNameLayout"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginBottom="20dp"
          app:layout_constraintVertical_chainStyle="packed"
          android:hint="@string/guestCommandName"
          android:layout_marginStart="32dp"
          app:layout_constraintEnd_toStartOf="@+id/guestCommandScoreLayout">

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/guestCommandName"
            android:singleLine="true"
            android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
          android:layout_width="70dp"
          android:layout_height="wrap_content"
          android:id="@+id/guestCommandScoreLayout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          app:layout_constraintBottom_toTopOf="@+id/ownerCommandScoreLayout"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginBottom="20dp"
          app:layout_constraintVertical_chainStyle="packed"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginEnd="32dp"
          app:layout_constraintStart_toEndOf="@+id/guestCommandNameLayout"
          android:layout_marginStart="16dp"
          android:hint="@string/score">

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/guestCommandScore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:singleLine="true" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          android:id="@+id/ownerCommandNameLayout"
          android:layout_marginStart="32dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/guestCommandNameLayout"
          app:layout_constraintVertical_chainStyle="packed"
          android:hint="@string/ownerCommandName"
          app:layout_constraintEnd_toStartOf="@+id/ownerCommandScoreLayout">

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ownerCommandName"
            android:inputType="text"
            android:singleLine="true" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
          android:layout_width="70dp"
          android:layout_height="wrap_content"
          android:id="@+id/ownerCommandScoreLayout"
          app:layout_constraintEnd_toEndOf="parent"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/guestCommandScoreLayout"
          app:layout_constraintVertical_chainStyle="packed"
          android:layout_marginEnd="32dp"
          app:layout_constraintStart_toEndOf="@+id/ownerCommandNameLayout"
          android:layout_marginStart="16dp"
          android:hint="@string/score">

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ownerCommandScore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:singleLine="true" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
          android:text="@string/buttonAddText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/addButton"
          app:layout_constraintTop_toBottomOf="@+id/ownerCommandNameLayout"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginTop="120dp"
          android:layout_marginStart="32dp"
          app:layout_constraintEnd_toStartOf="@+id/clearDBButton" />

  <Button
          android:text="@string/buttonClearText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/clearDBButton"
          app:layout_constraintTop_toBottomOf="@+id/ownerCommandNameLayout"
          android:layout_marginTop="120dp"
          app:layout_constraintStart_toEndOf="@+id/addButton"
          app:layout_constraintEnd_toStartOf="@+id/viewDBButton" />

  <Button
          android:text="@string/buttonViewDBText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/viewDBButton"
          app:layout_constraintTop_toBottomOf="@+id/ownerCommandNameLayout"
          android:layout_marginTop="120dp"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginEnd="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>